--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl:
   finance_quote: ^0.1.2
   firebase_core: ^0.5.3
   firebase_auth: ^0.18.4+1
